APTの処理でClassLoarderを使用しないで処理を行うよう改善